<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cartActivity.CartActivity">

    <LinearLayout
        android:id="@+id/header_details_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="35dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:src="@drawable/ic_back_arrow"
            android:background="@drawable/background_button_close_blue"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:textColor="@color/dark_blue"
            android:fontFamily="@font/mark_pro"
            android:text="@string/text_add_address"
            android:textStyle="bold"
            android:textSize="15sp"/>
        <ImageButton
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:src="@drawable/ic_add_address"
            android:background="@drawable/background_button_done"/>
    </LinearLayout>

    <TextView
        android:id="@+id/text_my_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mark_pro"
        android:layout_marginTop="50dp"
        android:layout_marginStart="40dp"
        android:text="@string/text_my_cart"
        android:textColor="@color/dark_blue"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/header_details_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/text_my_cart"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="50dp"
        android:paddingBottom="30dp"
        android:orientation="vertical"
        android:background="@drawable/background_bottom_menu">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cart_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="30dp"
            android:background="@android:color/transparent"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/transparent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/mark_pro"
                android:text="@string/text_total"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:background="@android:color/transparent"/>

            <TextView
                android:id="@+id/total_price_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:fontFamily="@font/mark_pro"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                android:background="@android:color/transparent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="12dp"
            android:background="@android:color/transparent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/mark_pro"
                android:text="@string/text_delivery"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:background="@android:color/transparent"/>

            <TextView
                android:id="@+id/delivery_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:fontFamily="@font/mark_pro"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                android:background="@android:color/transparent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"></LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="25dp"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/buy_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/col_cap_flow"
            android:layout_marginTop="30dp"
            android:layout_marginStart="44dp"
            android:layout_marginEnd="44dp"
            android:text="@string/button_checkout"
            android:textColor="@color/white"
            android:fontFamily="@font/mark_pro"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:background="@drawable/background_button_done"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>