<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/ThemeOverlay.EcommerceConcept.Main"
    tools:context=".detailsActivity.DetailsActivity">

    <LinearLayout
        android:id="@+id/header_details_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="35dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:src="@drawable/ic_back_arrow"
            android:background="@drawable/background_button_close_blue"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:textColor="@color/dark_blue"
            android:fontFamily="@font/mark_pro"
            android:text="@string/text_product_details"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <ImageButton
            android:id="@+id/cart_button"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:src="@drawable/ic_cart"
            android:background="@drawable/background_button_done"/>
    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/header_details_layout"
        app:layout_constraintBottom_toBottomOf="parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/details_view_pager"
                    android:layout_width="match_parent"
                    android:layout_height="335dp"
                    android:paddingTop="30dp"
                    android:paddingEnd="60dp"
                    android:paddingStart="60dp"
                    android:paddingBottom="7dp"
                    app:layout_constraintTop_toBottomOf="@+id/header_details_layout"
                    tools:layout_editor_absoluteY="40dp" />
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/details_layout_with_flow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_white_rounded"
                    android:orientation="vertical">
                    <LinearLayout
                        android:id="@+id/detail_name_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="30dp"
                        android:layout_marginStart="40dp"
                        android:layout_marginEnd="40dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:background="@android:color/transparent">
                        <TextView
                            android:id="@+id/detail_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:textColor="@color/dark_blue"
                            android:fontFamily="@font/mark_pro"
                            android:textStyle="bold"
                            android:textSize="18sp"/>
                        <ImageButton
                            android:id="@+id/button_favourite"
                            android:layout_width="37dp"
                            android:layout_height="37dp"
                            android:src="@drawable/ic_liked"
                            android:background="@drawable/background_button_close_blue"/>

                    </LinearLayout>

                    <RatingBar
                        android:id="@+id/detail_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="33dp"
                        app:layout_constraintTop_toBottomOf="@id/detail_name_layout"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="40dp"
                        style="@style/CustomRatingbar"
                        android:numStars="5"
                        android:rating="0"
                        android:stepSize="0.01"
                        android:background="@android:color/transparent"
                        android:isIndicator="true"/>

                    <com.google.android.material.tabs.TabLayout
                        android:id="@+id/tabs"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/ThemeOverlay.EcommerceConcept.Main.CustomTabLayout"
                        app:tabBackground="@drawable/background_tab_white"
                        app:tabTextColor="@color/hint_color"
                        app:tabIndicatorColor="@color/orange"
                        app:layout_constraintTop_toBottomOf="@+id/detail_rating"
                        app:tabSelectedTextColor="@color/dark_blue"
                        app:tabMode="fixed"
                        android:layout_marginTop="30dp">

                        <com.google.android.material.tabs.TabItem
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tab_shop" />

                        <com.google.android.material.tabs.TabItem
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tab_details" />

                        <com.google.android.material.tabs.TabItem
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tab_features" />
                    </com.google.android.material.tabs.TabLayout>
                    <androidx.constraintlayout.helper.widget.Flow
                        android:id="@+id/details_flow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:flow_wrapMode="chain"
                        app:flow_horizontalStyle="spread"
                        app:flow_verticalStyle="packed"
                        app:constraint_referenced_ids="cpu,camera,ram,sd"
                        app:layout_constraintTop_toBottomOf="@id/tabs"
                        android:background="@android:color/transparent"/>
                    <TextView
                        android:id="@+id/color_capacity_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginStart="30dp"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/mark_pro"
                        android:text="@string/text_select_color_and_capacity"
                        android:textColor="@color/dark_blue"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/details_flow"/>

                    <LinearLayout
                        android:id="@+id/cpu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:background="@android:color/transparent"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:src="@drawable/ic_cpu_image"/>
                        <TextView
                            android:id="@+id/cpu_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:textColor="@color/light_grey"
                            android:fontFamily="@font/mark_pro"
                            android:textStyle="bold"
                            android:textSize="11sp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/camera"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:background="@android:color/transparent"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:src="@drawable/ic_camera_image"/>
                        <TextView
                            android:id="@+id/camera_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:textColor="@color/light_grey"
                            android:fontFamily="@font/mark_pro"
                            android:textStyle="bold"
                            android:textSize="11sp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/ram"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:background="@android:color/transparent"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:src="@drawable/ic_ram_image"/>
                        <TextView
                            android:id="@+id/ram_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:textColor="@color/light_grey"
                            android:fontFamily="@font/mark_pro"
                            android:textStyle="bold"
                            android:textSize="11sp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/sd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:background="@android:color/transparent"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:src="@drawable/ic_sd_image"/>
                        <TextView
                            android:id="@+id/sd_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:textColor="@color/light_grey"
                            android:fontFamily="@font/mark_pro"
                            android:textStyle="bold"
                            android:textSize="11sp"/>
                    </LinearLayout>
                    <androidx.constraintlayout.helper.widget.Flow
                        android:id="@+id/col_cap_flow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        app:flow_horizontalGap="10dp"
                        app:flow_verticalGap="20dp"
                        android:background="@android:color/transparent"
                        app:layout_constraintTop_toBottomOf="@id/color_capacity_text"
                        app:constraint_referenced_ids="colors_flow,cap_flow"/>
                    <androidx.constraintlayout.helper.widget.Flow
                        android:id="@+id/colors_flow"
                        app:flow_horizontalGap="10dp"
                        app:flow_verticalGap="10dp"
                        android:background="@android:color/transparent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <androidx.constraintlayout.helper.widget.Flow
                        android:id="@+id/cap_flow"
                        app:flow_horizontalGap="10dp"
                        app:flow_verticalGap="10dp"
                        android:background="@android:color/transparent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <Button
                        android:id="@+id/buy_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/col_cap_flow"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="40dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/mark_pro"
                        android:textSize="18sp"
                        android:textAllCaps="false"
                        android:background="@drawable/background_button_done"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>